[package]
name = "computus"
version = "0.0.1"
authors = ["David Hewson <dev@daveid.co.uk>"]

description = "Bank Holidays for England & Wales in Rust"
homepage = "https://github.com/dten/bankholidays"
repository = "https://github.com/dten/bankholidays"
keywords = ["bankholidays", "uk", "england", "wales", "date", "calendar"]
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "^0.2.0"
computus = "^0.1"